# tinydocs

./: .gitignore  DOCME.md  Makefile  README.md  TINYDOC.md  TINYDOCS.md  main.py  pyproject.toml
example/: README.md  TINYDOCS.md  module_many_classes.py  module_with_functions.py  utils_module.py
example/subfolder/: module_with_class.py
example/submodule/: bigclass.py  classes_and_funcs.py
examples/: module_with_functions.py
examples/subfolder/: module_with_class.py
tests/: tree.py
tinydocs/: __init__.py  classes.py  main.py  parser.py  transformer.py
