[project]
name = "tinydocs"
version = "0.0.1"
authors = [
  { name="António Leitão", email="aleitao@novaims.unl.pt" },
]
description = "Lightweight autodoc for github readme"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpydoc>=1.5.0"
]

[project.urls]
"Homepage" = "https://github.com/antonio-leitao/docme"

[project.scripts]
jet = "tinydocs.main:main"

[tool.setuptools]
packages = ["tinydocs"]