[project]
name = "tinydocs"
version = "0.0.2"
authors = [
  { name="António Leitão", email="aleitao@novaims.unl.pt" },
]
description = "Lightweight autodoc for github readme"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpydoc>=1.5.0"
]

[project.urls]
"Homepage" = "https://github.com/antonio-leitao/docme"

[project.scripts]
tinydocs = "tinydocs.main:main"

[tool.setuptools]
packages = ["tinydocs"]